base/perfect-water/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfect-water
  namespace: perfect-water
spec:
  replicas: 1
  selector:
    matchLabels:
      run: perfect-water
  template:
    metadata:
      labels:
        run: perfect-water
    spec:
      containers:
        - name: perfect-water
          image: ghcr.io/chadkouse/perfect-water:latest
          ports:
            - containerPort: 3000
              name: web
