base/perfect-water/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: perfect-water
  namespace: perfect-water
spec:
  selector:
    run: perfect-water
  ports:
    - name: web
      port: 3000
      targetPort: 3000
